--- a/AccesoDatos/AccesoDatos.csproj
+++ b/AccesoDatos/AccesoDatos.csproj
@@ -83,6 +83,7 @@
     <Compile Include="ADFacturasD.cs" />
     <Compile Include="ADFacturasT.cs" />
     <Compile Include="ConexionBD.cs" />
+    <Compile Include="ParametrosGeneralesAD.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
