--- a/WebAppElectronicInvoice/Web.config
+++ b/WebAppElectronicInvoice/Web.config
@@ -4,6 +4,10 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -14,7 +18,11 @@
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime maxRequestLength="2147483647" targetFramework="4.8" />
   </system.web>
-  <runtime>
+	<connectionStrings>
+		<add name="BdElectronicInvoice" connectionString="Data Source=PC-JAVIER\DEVELOPER;Initial Catalog=DbFacturaElectronica;user id=sa; password= Superu1" providerName="System.Data.SqlClient"/>
+	</connectionStrings>
+
+	<runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" />
@@ -56,4 +64,29 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="ConsultaEstadosFacturasWSSoapBinding">
+          <security mode="Transport" />
+        </binding>
+        <binding name="ConsultaEstadosFacturasWSSoapBinding1" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="https://pruebas.invoway.com/INVOWAYLATAM/services/ConsultaEstadosFacturasWSPort" binding="basicHttpBinding" bindingConfiguration="ConsultaEstadosFacturasWSSoapBinding" contract="ServiceInvoway.ConsultaEstadosFacturasWSService" name="ConsultaEstadosFacturasWSPort" />
+    </client>
+  </system.serviceModel>
+  <entityFramework>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="System.Data.SQLite.EF6" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
+    </providers>
+  </entityFramework>
+  <system.data>
+    <DbProviderFactories>
+      <remove invariant="System.Data.SQLite.EF6" />
+      <add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6" description=".NET Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6" />
+    <remove invariant="System.Data.SQLite" /><add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" /></DbProviderFactories>
+  </system.data>
 </configuration>
