Se crea la lista de clientes pendientes
Se crea la pantalla para consultar los clientes pendientes por actualizar

--- a/AccesoDatos/AccesoDatos.csproj
+++ b/AccesoDatos/AccesoDatos.csproj
@@ -82,6 +82,7 @@
     <Compile Include="ADClienteIntegrin.cs" />
     <Compile Include="ADFacturasD.cs" />
     <Compile Include="ADFacturasT.cs" />
+    <Compile Include="ADTipoDocumento.cs" />
     <Compile Include="ConexionBD.cs" />
     <Compile Include="ParametrosGeneralesAD.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
