--- a/Entidades/Entidades.csproj
+++ b/Entidades/Entidades.csproj
@@ -47,6 +47,7 @@
     <Compile Include="FacturasD.cs" />
     <Compile Include="FacturasT.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TipoDocumento.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
