--- a/AccesoDatos/AccesoDatos.csproj
+++ b/AccesoDatos/AccesoDatos.csproj
@@ -82,8 +82,12 @@
     <Compile Include="ADClienteIntegrin.cs" />
     <Compile Include="ADFacturasD.cs" />
     <Compile Include="ADFacturasT.cs" />
+    <Compile Include="ADLecturas.cs" />
+    <Compile Include="ADParametrosGenerales.cs" />
+    <Compile Include="ADTarifas.cs" />
     <Compile Include="ADTipoDocumento.cs" />
     <Compile Include="ConexionBD.cs" />
+    <Compile Include="MaeDepto_MuniAD.cs" />
     <Compile Include="ParametrosGeneralesAD.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
