--- a/WebAppElectronicInvoice/WebAppElectronicInvoice.csproj
+++ b/WebAppElectronicInvoice/WebAppElectronicInvoice.csproj
@@ -151,6 +151,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Security\SecurityHeader.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Connected Services\ServiceInvoway\configuration91.svcinfo" />
@@ -234,11 +235,11 @@
     <Content Include="Views\CargarDatos\CargarDatos.cshtml" />
     <Content Include="Views\Cliente\Cliente.cshtml" />
     <Content Include="Views\Cliente\EditCliente.cshtml" />
+    <Content Include="Views\EnviarFactura\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
-    <Folder Include="Views\EnviarFactura\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.rtl.min.css.map" />
