Envio de Factura
Se crean las entidades para crear el documento xml y se corrige la conexión con el servicio web invoway

--- a/Entidades/Entidades.csproj
+++ b/Entidades/Entidades.csproj
@@ -43,6 +43,40 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClienteIntegrin.cs" />
+    <Compile Include="documentoAdjunto.cs" />
+    <Compile Include="documentoAnticipo.cs" />
+    <Compile Include="documentoCargo.cs" />
+    <Compile Include="documentoCliente.cs" />
+    <Compile Include="documentocondicionesPago.cs" />
+    <Compile Include="documentocondicionPago.cs" />
+    <Compile Include="documentodatoAdicional.cs" />
+    <Compile Include="documentodatosTotales.cs" />
+    <Compile Include="documentoDescuento.cs" />
+    <Compile Include="documentoemailsEnvio.cs" />
+    <Compile Include="documentoExtensionSPD.cs" />
+    <Compile Include="documentoImpuesto.cs" />
+    <Compile Include="documentoLinea.cs" />
+    <Compile Include="documentoLineaCargo.cs" />
+    <Compile Include="documentolineaCargos.cs" />
+    <Compile Include="documentoLineadatoAdicional.cs" />
+    <Compile Include="documentoLineaDescuento.cs" />
+    <Compile Include="documentolineaDescuentos.cs" />
+    <Compile Include="documentoLineaimpuestoAdicional.cs" />
+    <Compile Include="documento.cs" />
+    <Compile Include="documentoLineas.cs" />
+    <Compile Include="documentoProveedor.cs" />
+    <Compile Include="documentoReferenciado.cs" />
+    <Compile Include="documentoRetencion.cs" />
+    <Compile Include="extensionSPDservicioPublico.cs" />
+    <Compile Include="extensionSPDservicioPublicosuscriptor.cs" />
+    <Compile Include="extensionSPDservicioPublicovalorFacturado.cs" />
+    <Compile Include="extensionSPDservicioPublicovalorFacturadohistoricoConsumo.cs" />
+    <Compile Include="extensionSPDservicioPublicovalorFacturadohistoricoConsumoconsumoMensual.cs" />
+    <Compile Include="extensionSPDservicioPublicovalorFacturadohistoricoConsumoconsumoPromedio.cs" />
+    <Compile Include="extensionSPDservicioPublicoValorFacturadoproducto.cs" />
+    <Compile Include="extensionSPDservicioPublicoValorFacturadoProductoCargo.cs" />
+    <Compile Include="extensionSPDservicioPublicoValorFacturadoProductoDescuento.cs" />
+    <Compile Include="extensionSPDservicioPublicoValorFacturadoProductoLecturaContador.cs" />
     <Compile Include="FacturasD.cs" />
     <Compile Include="FacturasT.cs" />
     <Compile Include="Lectura.cs" />
