--- a/WebAppElectronicInvoice/Web.config
+++ b/WebAppElectronicInvoice/Web.config
@@ -67,17 +67,8 @@
     </compilers>
   </system.codedom>
   <system.serviceModel>
-    <bindings>
-      <basicHttpBinding>
-        <binding name="ConsultaEstadosFacturasWSSoapBinding">
-          <security mode="Transport" />
-        </binding>
-        <binding name="ConsultaEstadosFacturasWSSoapBinding1" />
-      </basicHttpBinding>
-    </bindings>
-    <client>
-      <endpoint address="https://pruebas.invoway.com/INVOWAYLATAM/services/ConsultaEstadosFacturasWSPort" binding="basicHttpBinding" bindingConfiguration="ConsultaEstadosFacturasWSSoapBinding" contract="ServiceInvoway.ConsultaEstadosFacturasWSService" name="ConsultaEstadosFacturasWSPort" />
-    </client>
+    <bindings />
+    <client />
   </system.serviceModel>
   <entityFramework>
     <providers>
