--- a/WebAppElectronicInvoice/Web.config
+++ b/WebAppElectronicInvoice/Web.config
@@ -13,15 +13,16 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-	  <add key="UsuarioInvoway" value="enercer-int"/>
-	  <add key="PasswordInvoway" value="5cMI7c6w6£pv"/>
+	  <add key="UsuarioInvoway" value="enercer-int" />
+	  <add key="PasswordInvoway" value="5cMI7c6w6£pv" />
+	  <add key="Urlinvoway" value="https://pruebas.invoway.com/INVOWAYLATAM/services/ConsultaEstadosFacturasWSPort" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime maxRequestLength="2147483647" targetFramework="4.8" />
   </system.web>
 	<connectionStrings>
-		<add name="BdElectronicInvoice" connectionString="Data Source=PC-JAVIER\DEVELOPER;Initial Catalog=DbFacturaElectronica;user id=sa; password= Superu1" providerName="System.Data.SqlClient"/>
+		<add name="BdElectronicInvoice" connectionString="Data Source=PC-JAVIER\DEVELOPER;Initial Catalog=DbFacturaElectronica;user id=sa; password= Superu1" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 
 	<runtime>
@@ -57,6 +58,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-5.2.9.0" newVersion="5.2.9.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
