--- a/WebAppElectronicInvoice/packages.config
+++ b/WebAppElectronicInvoice/packages.config
@@ -2,10 +2,15 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net48" />
   <package id="bootstrap" version="5.2.3" targetFramework="net48" />
+  <package id="BouncyCastle.Cryptography" version="2.2.1" targetFramework="net48" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
   <package id="itext" version="8.0.5" targetFramework="net48" />
+  <package id="itext.bouncy-castle-adapter" version="8.0.5" targetFramework="net48" />
+  <package id="itext.bouncy-castle-fips-adapter" version="8.0.5" targetFramework="net48" />
   <package id="itext.commons" version="8.0.5" targetFramework="net48" />
   <package id="itext7" version="8.0.5" targetFramework="net48" />
+  <package id="itext7.bouncy-castle-adapter" version="8.0.5" targetFramework="net48" />
+  <package id="itext7.bouncy-castle-fips-adapter" version="8.0.5" targetFramework="net48" />
   <package id="jQuery" version="3.7.0" targetFramework="net48" />
   <package id="jQuery.Validation" version="1.19.5" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net48" />
