se agrega formato de factura al xml
Se adiciona el formato pdf al documento xml para enviar como representación grafica a invoway

--- a/Entidades/Entidades.csproj
+++ b/Entidades/Entidades.csproj
@@ -67,6 +67,7 @@
     <Compile Include="documentoProveedor.cs" />
     <Compile Include="documentoReferenciado.cs" />
     <Compile Include="documentoRetencion.cs" />
+    <Compile Include="documentosAdjuntos.cs" />
     <Compile Include="Envio_Factura.cs" />
     <Compile Include="extensionSPDservicioPublico.cs" />
     <Compile Include="extensionSPDservicioPublicosuscriptor.cs" />
