--- a/WebAppElectronicInvoice/Web.config
+++ b/WebAppElectronicInvoice/Web.config
@@ -13,9 +13,12 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-	  <add key="UsuarioInvoway" value="enercer-int" />
-	  <add key="PasswordInvoway" value="5cMI7c6w6£pv" />
-	  <add key="Urlinvoway" value="https://pruebas.invoway.com/INVOWAYLATAM/services/ConsultaEstadosFacturasWSPort" />
+	 <!-- <add key="UsuarioInvoway" value="enercer-int" />
+	  <add key="PasswordInvoway" value="5cMI7c6w6£pv" />-->
+	  <add key="UsuarioInvoway" value="enercer-prod" />
+	  <add key="PasswordInvoway" value="kvEqoF89pQGI" />
+	  <!-- <add key="Urlinvoway" value="https://pruebas.invoway.com/INVOWAYLATAM/services/ConsultaEstadosFacturasWSPort" />-->
+	  <add key="Urlinvoway" value="https://cli.invoway.com/INVOWAYLATAM/services/ConsultaEstadosFacturasWSPort" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
